--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </form>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
     <script type="text/javascript">
         var $burgerButton = document.getElementById('burgerButton');
@@ -128,11 +129,25 @@
             $menu.classList.toggle('active')
         };
 
+        function showMenu(){
+            $menu.classList.add('active');
+        };
+
+        function hideMenu(){
+            $menu.classList.remove('active');
+        };
+
 
         var bLazy = new Blazy({
             selector:'img'
         // options: Toma todas las imagenes con etiqueta data-src
         });
+
+        //Gestos touch con Hammer js
+        var $body = document.body;
+        var gestos = new Hammer($body);
+          gestos.on('swipeleft', hideMenu);
+          gestos.on('swiperight', showMenu);
     </script>
   </body>
 </html>
